@@ -119,10 +119,8 @@ struct ospf_db_desc
 
 
 /* Macros. */
+/* XXX Perhaps obsolete; function in ospf_packet.c */
 #define OSPF_PACKET_MAX(oi)     ospf_packet_max (oi)
-/*
-#define OSPF_PACKET_MAX(oi)     (((oi)->ifp->mtu - ((oi)->auth_md5 ? OSPF_AUTH_MD5_SIZE : 0)) - 88)
-*/
 
 #define OSPF_OUTPUT_PNT(S)      ((S)->data + (S)->putp)
 #define OSPF_OUTPUT_LENGTH(S)   ((S)->endp)
